--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ theme: minima
 title: Journey into 3D Vision
 author: Venkat Ramnan K
 description: An idiot trying to learn 3D computer vision tries to build a journey guide for other idiots like him.
+
+
+url: 'https://venkatramnank.github.io/' # your main domain
+baseurl: '3d-Vision-Journey'
