--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ description: An idiot trying to learn 3D computer vision tries to build a journe
 
 
 url: 'https://venkatramnank.github.io/' # your main domain
-baseurl: '3d-Vision-Journey'
+baseurl: '3d-Vision-Journey/'
