--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,12 @@ description: An idiot trying to learn 3D computer vision tries to build a journe
 
 url: 'https://venkatramnank.github.io/' # your main domain
 baseurl: '3d-Vision-Journey/'
+
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: pages
+    values:
+      layout: default
